@@ -36,6 +36,7 @@
 === Bug fixes ===
  * #1052 (The Dirichlet and Normal distributions only have 1D graphics in the doc)
  * #1287 (The constructors of KernelSmoothing have no doc)
+ * #1418 (The Contour example does not present the second constructor)
  * #1431 (The figure for LHSExperiment is not accurate)
  * #1459 (There is no example which shows how to set a column of a Sample)
  * #1497 (There is no example to create a multivariate Normal distribution)
